# dabaicai

./: .gitignore  CMakeLists.txt  updateignore.sh
common/: define.hpp  tool.hpp
common/nlohmann/detail/: macro_scope.hpp
deploy/: 8-26.sh  cmd.sh  hopex.pwd  keoslog.sh  nodeos.md  open_wallet.sh  pp.json  print_keosdlog.sh  start_keosd.sh  stop_keosd.sh
deploy/biosboot/: 8-25.sh  Resign.sh  cc_helper.sh  cleos_alias.sh  deploy_manual.sh  genesis.json  help.sh
deploy/biosboot/accountnum11/: genesis_start.sh  hard_start.sh  printlog.sh  start.sh  stop.sh
deploy/biosboot/accountnum12/: genesis_start.sh  hard_start.sh  start.sh
deploy/biosboot/accountnum13/: genesis_start.sh  hard_start.sh  start.sh  stop.sh
deploy/wallet/: hopex.wallet
learn/: CMakeLists.txt  README.txt  build.sh  cmd.sh  deploy_contract.sh
learn/include/: learn.hpp
learn/src/: CMakeLists.txt  learn.cpp
maker/: CMakeLists.txt  README.txt  build.sh  op.sh
maker/include/: maker.hpp
maker/src/: CMakeLists.txt  maker.cpp
otcexchange/: CMakeLists.txt  README.txt  build.sh  build_dev.sh  deploy_contract.sh  fast.sh  log.sh  op.sh  op_dev.sh  update.sh
otcexchange/include/: define.h  otcexchange.hpp  otcsystem.hpp
otcexchange/ricardian/: otcexchange.contracts.md
otcexchange/src/: CMakeLists.txt  otcexchange.cpp
otcsetting/: CMakeLists.txt  README.txt  build.sh  deploy_contract.sh  op.sh
otcsetting/include/: otcsetting.hpp
otcsetting/src/: CMakeLists.txt  otcsetting.cpp
sendmail/: go.mod  main.go
taker/: CMakeLists.txt  README.txt  build.sh  deploy_contract.sh
taker/include/: taker.hpp
taker/src/: CMakeLists.txt  taker.cpp
(+4 files in other folders)
